# ocean-going

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: blend.frag
saves/: highroler.json  level10.json  level15.json  level20.json  level25.json  level30.json  level5.json  standard.json
src/: Config.hpp.in  Game.cpp  Game.hpp
src/constants/: Colors.hpp  Paths.hpp
src/factory/: ShipConfiguration.cpp  ShipConfiguration.hpp  Upgrade.cpp  Upgrade.hpp
src/handling/: CollisionHandler.cpp  CollisionHandler.hpp  EventHandler.cpp  EventHandler.hpp  GameSaver.cpp  GameSaver.hpp  LevelManager.cpp  LevelManager.hpp  ObjectManager.cpp  ObjectManager.hpp  ResourceManager.cpp  ResourceManager.hpp  SceneLoader.cpp  SceneLoader.hpp
src/object/: Collidable.cpp  Collidable.hpp  GameObject.cpp  GameObject.hpp
src/object/drop/: Drop.cpp  Drop.hpp  HealingBarrel.cpp  HealingBarrel.hpp  ShipParts.cpp  ShipParts.hpp  Treasure.cpp  Treasure.hpp
src/object/entity/: CannonBall.cpp  CannonBall.hpp  Effect.cpp  Effect.hpp  ShipWreck.cpp  ShipWreck.hpp
src/object/ship/: Cannon.cpp  Cannon.hpp  EnemyShip.cpp  EnemyShip.hpp  PlayerShip.cpp  PlayerShip.hpp  Ruder.cpp  Ruder.hpp  Sail.cpp  Sail.hpp  Ship.cpp  Ship.hpp
src/object/ui/: AttributeBar.cpp  AttributeBar.hpp  CannonDisplay.cpp  CannonDisplay.hpp  FPSDisplay.cpp  FPSDisplay.hpp  HealthBar.cpp  HealthBar.hpp  Label.cpp  Label.hpp  Minimap.cpp  Minimap.hpp  UIElement.cpp  UIElement.hpp
src/object/ui/button/: Button.cpp  Button.hpp  PlankButton.cpp  PlankButton.hpp  UpgradeButton.cpp  UpgradeButton.hpp
src/object/ui/container/: CompletedScreen.cpp  CompletedScreen.hpp  Container.cpp  Container.hpp  DeathScreen.cpp  DeathScreen.hpp  InGameUI.cpp  InGameUI.hpp  MainMenuUI.cpp  MainMenuUI.hpp  ShipMenuUI.cpp  ShipMenuUI.hpp  ShipPreview.cpp  ShipPreview.hpp  TutorialUI.cpp  TutorialUI.hpp
src/object/world/: Border.cpp  Border.hpp  Island.cpp  Island.hpp  IslandDecoration.cpp  IslandDecoration.hpp  Vortex.cpp  Vortex.hpp  World.cpp  World.hpp
src/util/: Animation.cpp  Animation.hpp  InterpolateAnimation.cpp  InterpolateAnimation.hpp  MultiLayerTexture.cpp  MultiLayerTexture.hpp  RandomGenerator.cpp  RandomGenerator.hpp  Shapes.cpp  Shapes.hpp  Text.cpp  Text.hpp
